# ImageProcessingHillelSimon

./: CMakeLists.txt  README.md  bmp24.c  bmp24.h  bmp8.c  bmp8.h  histogram.c  histogram.h  main.c
